# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yaml  history.txt  railway.toml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-c9b62c4f412c1ee930205bcdd32ab4cfe01117c0b648de81cdea8b38ea436248.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230708200309_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  db.rs  domain.rs  email_client.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscription.rs  subscription_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
