[package]
edition = "2021"
name    = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
axum = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = { version = "0.13" }
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.18.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "request-id", "util"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-error = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11"
