[package]
edition = "2021"
name    = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
axum = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = { version = "0.13" }
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
once_cell = "1.18.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
sqlx = { version = "0.7.0", default-features = false, features = [
  'runtime-tokio',
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "request-id", "util"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-error = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "fmt"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.16"

[dev-dependencies]
claims            = "0.7"
fake              = "2"
quickcheck        = "1"
quickcheck_macros = "1"
reqwest           = { version = "0.11", features = ["json"] }
